# OrionIntel

./: .env.example  .pre-commit-config.yaml  LICENSE  PROJECT_IDENTIFIERS.md  README.md  main.py  pyproject.toml
docker/: docker-compose.yml
routes/: base.py
src/: .env.example  main.py  pyproject.toml
src/controllers/: BaseController.py  DataController.py  ProcessController.py  ProjectController.py  __init__.py
src/helpers/: config.py
src/models/: AssetModel.py  ChunkModel.py  ProjectModel.py  __init__.py
src/models/db_schemes/: __init__.py  asset.py  data_chunk.py  project.py
src/models/enums/: ResponseEnums.py
src/routes/: base.py  data.py
src/routes/schemes/: data.py
src/stores/llm/: LLMProviderFactory.py
src/stores/llm/providers/: CoHereProvider.py  OpenAIProvider.py  __init__.py
src/stores/vectordb/: VectorDBProviderFactory.py
src/stores/vectordb/providers/: QdrantDBProvider.py  __init__.py
